fix: flow flex on mobile

--- a/assets/css/variables.scss
+++ b/assets/css/variables.scss
@@ -51,11 +51,13 @@
 
 div.service-section {
     display: flex;
+    flex-flow: wrap;
 
 }
 div.service-section-item {
     background-color: white;
-    flex: 1 1 auto;
+    flex: 1;
+    min-width: 150px;
 
     border-radius: 1em;
     padding: 1em;
